Issue #255 Fix for appbar/drawer clipping

--- a/src/MudBlazor/wwwroot/MudBlazor.css
+++ b/src/MudBlazor/wwwroot/MudBlazor.css
@@ -4554,22 +4554,47 @@ ul {
 .mud-overlay {
   top: 0;
   left: 0;
-  margin: 0px !important;
-  height: 100%;
-  width: 100%;
+  right: 0;
+  bottom: 0;
+  margin: 0 !important;
+  align-items: center;
+  justify-content: center;
+  border-radius: inherit;
+  display: flex;
   position: fixed;
-  z-index: var(--mud-zindex-popover);
-  background-color: transparent; }
-  .mud-overlay.mud-animation {
+  transition: 0.3s cubic-bezier(0.25, 0.8, 0.5, 1), z-index 1ms;
+  z-index: 5; }
+  .mud-overlay.mud-overlay-absolute {
+    position: absolute; }
+  .mud-overlay .mud-overlay-scrim {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: inherit;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border-color: transparent;
+    background-color: transparent;
     animation: mud-animation-fadein ease 0.15s;
     -webkit-animation: mud-animation-fadein ease 0.15s;
     -moz-animation: mud-animation-fadein ease 0.15s;
     -o-animation: mud-animation-fadein ease 0.15s; }
-  .mud-overlay.mud-absolute {
-    position: absolute; }
+    .mud-overlay .mud-overlay-scrim.mud-overlay-dark {
+      border-color: var(--mud-palette-overlay-dark);
+      background-color: var(--mud-palette-overlay-dark); }
+    .mud-overlay .mud-overlay-scrim.mud-overlay-light {
+      border-color: var(--mud-palette-overlay-light);
+      background-color: var(--mud-palette-overlay-light); }
+  .mud-overlay .mud-overlay-content {
+    position: relative; }
+  .mud-overlay.mud-overlay-popover {
+    z-index: var(--mud-zindex-popover); }
   .mud-overlay.mud-overlay-dialog {
-    z-index: calc(var(--mud-zindex-dialog) + 1);
-    background-color: rgba(0, 0, 0, 0.5); }
+    z-index: calc(var(--mud-zindex-dialog) + 1); }
+  .mud-overlay.mud-overlay-drawer {
+    z-index: var(--mud-zindex-dialog); }
 
 .d-flex {
   display: flex !important; }
@@ -9126,16 +9151,17 @@ ul {
 
 .mud-appbar-drawer-clipped {
   width: 100%; }
-  .mud-appbar-drawer-clipped-left {
-    margin-right: var(--mud-drawer-width); }
-    .mud-appbar-drawer-clipped-left:not(.mud-appbar-drawer-open-right) {
-      width: 100%;
-      margin-right: auto; }
-  .mud-appbar-drawer-clipped-right {
-    margin-left: var(--mud-drawer-width); }
-    .mud-appbar-drawer-clipped-right:not(.mud-appbar-drawer-open-left) {
-      width: 100%;
-      margin-left: auto; }
+  @media (min-width: 1280px) {
+    .mud-appbar-drawer-clipped-left {
+      margin-right: var(--mud-drawer-width); }
+      .mud-appbar-drawer-clipped-left:not(.mud-appbar-drawer-open-right) {
+        width: 100%;
+        margin-right: auto; }
+    .mud-appbar-drawer-clipped-right {
+      margin-left: var(--mud-drawer-width); }
+      .mud-appbar-drawer-clipped-right:not(.mud-appbar-drawer-open-left) {
+        width: 100%;
+        margin-left: auto; } }
 
 .mud-appbar-fixed {
   position: fixed;
@@ -9171,7 +9197,8 @@ ul {
     .mud-drawer.mud-drawer-anchor-left.mud-drawer--closed {
       transform: none;
       transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-      visibility: unset; }
+      visibility: unset;
+      z-index: calc(var(--mud-zindex-dialog) + 1); }
       .mud-drawer.mud-drawer-anchor-left.mud-drawer--closed.mud-drawer--initial {
         transform: translateX(calc(-1 * var(--mud-drawer-width)));
         visibility: hidden; }
@@ -9185,7 +9212,8 @@ ul {
     .mud-drawer.mud-drawer-anchor-right.mud-drawer--closed {
       transform: none;
       transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-      visibility: unset; }
+      visibility: unset;
+      z-index: calc(var(--mud-zindex-dialog) + 1); }
       .mud-drawer.mud-drawer-anchor-right.mud-drawer--closed.mud-drawer--initial {
         transform: translateX(var(--mud-drawer-width));
         visibility: hidden; }
@@ -9199,22 +9227,15 @@ ul {
   min-height: var(--mud-appbar-min-height);
   padding: 12px 24px 12px 24px; }
 
-@media (min-width: 0px) and (orientation: landscape) {
-  .mud-drawer-clipped {
-    padding-top: calc(var(--mud-appbar-min-height) - 16px); } }
+.mud-drawer-clipped {
+  padding-top: 0; }
 
-@media (min-width: 600px) {
+@media (min-width: 1280px) {
   .mud-drawer-clipped {
     padding-top: var(--mud-appbar-min-height); } }
 
 .mud-drawer-overlay {
-  display: none;
-  z-index: var(--mud-zindex-drawer);
-  background-color: rgba(0, 0, 0, 0.5);
-  animation: mud-animation-fadein ease 0.15s;
-  -webkit-animation: mud-animation-fadein ease 0.15s;
-  -moz-animation: mud-animation-fadein ease 0.15s;
-  -o-animation: mud-animation-fadein ease 0.15s; }
+  display: none; }
   .mud-drawer-overlay.mud-drawer--open {
     display: block; }
     .mud-drawer-overlay.mud-drawer--open.mud-drawer--initial {
